--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -442,3 +442,33 @@
     transform: translateY(0);
   }
 }
+/* styles.css */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes scaleUp {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-out;
+}
+
+.scale-up {
+  animation: scaleUp 0.5s ease-out;
+}
