--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -282,57 +282,61 @@
   animation: rightanimation 2s ease-in-out both;
   animation-timeline: view(90% 10%);
 }
-.gallery-body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 50vh;
-  background: #00000000;
-}
 
-.gallery{
-  position: relative;
-  width: 300px;
-  height: 200px;
-  transform-style: preserve-3d;
-  animation: animate 30s linear  infinite;
-  animation-play-state: running;
-}
 
-@keyframes animate {
-  0%{
-      transform: perspective(1000px) rotateY(0deg);
-  }
-  100%{
-      transform: perspective(1000px) rotateY(360deg);
-  }
-}
-
-.gallery:hover{
-  animation-play-state: paused;
-}
-
-.gallery span{
-  position: absolute;
-  top: 0;
-  left: 0;
+/*slider*/
+.slider{
   width: 100%;
-  height: 100%;
-  transform-origin: center;
-  transform-style: preserve-3d;
-  transform: rotateY(calc(var(--i) * 36deg)) translateZ(400px);
-  -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004);
+  height: var(--height);
+  overflow: hidden;
+  mask-image: linear-gradient(
+      to right,
+      transparent,
+      #000 10% 90%,
+      transparent
+  );
 }
-
-.gallery span img{
+.slider .list{
+  display: flex;
+  width: 100%;
+  min-width: calc(var(--width) * var(--quantity));
+  position: relative;
+}
+.slider .list .item{
+  width: var(--width);
+  height: var(--height);
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  border-radius: 10px;
-  object-fit: cover;
-  cursor: pointer;
+  left: 100%;
+  animation: autoRun 10s linear infinite;
+  transition: filter 0.5s;
+  animation-delay: calc( (10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
+}
+.slider .list .item img{
+  width: 100%;
+}
+@keyframes autoRun{
+  from{
+      left: 100%;
+  }to{
+      left: calc(var(--width) * -1);
+  }
+}
+.slider:hover .item{
+  animation-play-state: paused!important;
+  filter: grayscale(1);
+}
+.slider .item:hover{
+  filter: grayscale(0);
+}
+.slider[reverse="true"] .item{
+  animation: reversePlay 10s linear infinite;
+}
+@keyframes reversePlay{
+  from{
+      left: calc(var(--width) * -1);
+  }to{
+      left: 100%;
+  }
 }
 
 
