--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -312,6 +312,7 @@
   animation-delay: calc( (10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
 }
 .slider .list .item img{
+  object-fit: cover;
   width: 100%;
 }
 @keyframes autoRun{
@@ -327,16 +328,6 @@
 }
 .slider .item:hover{
   filter: grayscale(0);
-}
-.slider[reverse="true"] .item{
-  animation: reversePlay 10s linear infinite;
-}
-@keyframes reversePlay{
-  from{
-      left: calc(var(--width) * -1);
-  }to{
-      left: 100%;
-  }
 }
 
 
