--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -283,52 +283,52 @@
   animation-timeline: view(90% 10%);
 }
 
-
-/*slider*/
-.slider{
-  width: 100%;
-  height: var(--height);
-  overflow: hidden;
-  mask-image: linear-gradient(
-      to right,
-      transparent,
-      #000 10% 90%,
-      transparent
-  );
-}
-.slider .list{
-  display: flex;
-  width: 100%;
-  min-width: calc(var(--width) * var(--quantity));
+/* Container */
+.slider {
+  width: 90%;
+  height: 350px;
   position: relative;
+  margin: auto;
+  display: grid;
+  place-items: center;
+
 }
-.slider .list .item{
-  width: var(--width);
-  height: var(--height);
-  position: absolute;
-  left: 100%;
-  animation: autoRun 10s linear infinite;
-  transition: filter 0.5s;
-  animation-delay: calc( (10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
+
+/* Track */
+.slider-track {
+  display: flex;
+  width: calc(250px *26);
+  animation: scroll 40s linear infinite;
 }
-.slider .list .item img{
-  object-fit: cover;
+
+/* Slides */
+.slide {
+  width: 250px;
+  height: 250px;
+  display: flex;
+  padding: 15px;
+}
+
+/* Images */
+.slide img {
   width: 100%;
+  height: 350px;
+  object-fit: cover;
+  border-radius: 10px;
+  
 }
-@keyframes autoRun{
-  from{
-      left: 100%;
-  }to{
-      left: calc(var(--width) * -1);
+
+/* Keyframes for continuous scrolling */
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
   }
 }
-.slider:hover .item{
-  animation-play-state: paused!important;
-  filter: grayscale(1);
-}
-.slider .item:hover{
-  filter: grayscale(0);
-}
+
+
 
 
 
